--- a/add.css
+++ b/add.css
@@ -20,13 +20,6 @@ h1 {
   top: 50px;
   position: absolute;
 }
-
-/* .background >#img {
-  width: 1920px;
-  height: 937px;  
-  background-image: url(img/background.png);
-} */
-
 #aa {
   z-index: 0;
   width: 100%;
@@ -43,16 +36,18 @@ h1 {
 
 #button1 {
   color: black;
+  z-index: 4;
   width: 200px;
   height: 200px;
   padding: 0;
   margin: 0;
-  top: 300px;
+  top: 320px;
   left: 50px;
 
   position: absolute;
 }
 #button1 > button {
+  z-index: 4;
   border-width: 0;
   background: none;
 }
@@ -63,7 +58,7 @@ h1 {
   height: 200px;
   padding: 0;
   margin: 0;
-  top: 300px;
+  top: 350px;
   left: 250px;
 
   position: absolute;
@@ -77,8 +72,6 @@ h1 {
   width: 150px;
   height: 150px;
   margin: 0;
-  /* background-image: url(img/gong.png);
-  object-fit: cover; */
 }
 
 .forButton {
@@ -94,4 +87,16 @@ h1 {
   width : 1000px;
   position: sticky;
   margin: 10px;
+}
+
+#result > input {
+  z-index: 10;
+  width: 350px;
+  font-size: 20pt;
+  position: absolute;
+  display: flexbox;
+  left: 110px;
+  top: 200px;
+  border: none;
+  transform: rotate(5deg);
 }
