--- a/roulette.css
+++ b/roulette.css
@@ -16,6 +16,7 @@ body {
 }
 
 p{
+  color: black;
   text-align: center;
 }
 
@@ -98,6 +99,7 @@ h1 {
 }
 
 #result {
+  color: black;
   z-index: 10;
   font-size: 60px;
   position: absolute;
@@ -109,6 +111,7 @@ h1 {
 }
 
 #aaa {
+  color: black;
   z-index:3;
   position: absolute;
   right: 0px;
